force-app/main/default/objects/ssot__AssessmentEnvelope__dlm/fields/ssot__EnvelopeNotificationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnvelopeNotificationStatus__c</fullName>
    <label>Envelope Notification Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnvelopeNotificationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>