force-app/main/default/objects/ssot__AssessmentEnvelope__dlm/fields/ssot__EnvelopeStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnvelopeStatus__c</fullName>
    <label>Envelope Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnvelopeStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>