force-app/main/default/objects/ssot__AssessmentEnvelope__dlm/fields/ssot__RecipientId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecipientId__c</fullName>
    <label>Recipient</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecipientId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>