force-app/main/default/objects/ssot__AssessmentEnvelope__dlm/fields/ssot__RecipientObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecipientObject__c</fullName>
    <label>Recipient Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecipientObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>