force-app/main/default/objects/ssot__AssessmentEnvelope__dlm/fields/ssot__rel_1720291282387_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291282387_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentEnvelope_RecipientId_map_A_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>AssessmentEnvelope_RecipientId_map_A_rel</relationshipLabel>
    <relationshipName>rel_1720291282387_end</relationshipName>
    <type>Lookup</type>
</CustomField>