force-app/main/default/objects/ssot__AssessmentEnvelope__dlm/fields/ssot__rel_1720291812443_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291812443_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentEnvelope_RequestReferenceI_rel</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>AssessmentEnvelope_RequestReferenceI_rel</relationshipLabel>
    <relationshipName>rel_1720291812443_end</relationshipName>
    <type>Lookup</type>
</CustomField>